Final SEO + OG update for RJ Papad Surat homepage
Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,39 +1,101 @@
 <!DOCTYPE html>
 <html lang="hi">
-  <section id="delivery">
-  <h2>Delivery Areas — RJ Papad Surat</h2>
-  <p>हम Surat के Adajan, Varachha, Vesu, Pal और Bhestan सहित कई इलाकों में मुफ्त डिलीवरी करते हैं. <a href="areas.html">पुरे सूची देखें</a> या WhatsApp करें: <a href="https://wa.me/916353745646">+91 6353745646</a>.</p>
-  </section>
 <head>
-<meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास. Udad mri papad ₹330/kg. Only Surat free delivery. Order: +91 6353745646" />
-<link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>RJ Papad Surat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>स्वाद में खास RJ पापड़ का विश्वास — RJ Papad Surat</title>
+  <meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास। ₹330/kg, Only Surat Free Delivery. घर जैसा स्वाद, होममेड क्वालिटी।">
+  <meta name="keywords" content="RJ Papad Surat, Papad Surat, Homemade Papad, Papad Delivery Surat, Papad Online Order, RJ Papad">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/">
+
+  <!-- Open Graph / Social Preview -->
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad Surat">
+  <meta property="og:description" content="₹330/kg • Only Surat Free Delivery • स्वाद में खास RJ पापड़ का विश्वास।">
+  <meta property="og:image" content="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de7861faafb1b8052e9bd122.png">
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/">
+  <meta property="og:type" content="website">
+
+  <!-- JSON-LD Schema for Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad Surat",
+    "description": "स्वाद में खास RJ पापड़ का विश्वास — ₹330/kg • Only Surat Free Delivery",
+    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de7861faafb1b8052e9bd122.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressCountry": "IN"
+    },
+    "telephone": "+919000000000",
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/"
+  }
+  </script>
+
   <style>
-    body{font-family:sans-serif;background:#fffbea;color:#333;text-align:center;margin:0;padding:0}
-    header{background:#ffd93b;padding:15px;border-radius:0 0 15px 15px}
-    img{max-width:100%;height:auto;border-radius:10px;margin:15px auto;display:block}
-    .btn{display:inline-block;background:#25D366;color:white;padding:10px 20px;border-radius:25px;text-decoration:none;font-weight:bold}
+    body {
+      font-family: "Noto Sans Devanagari", sans-serif;
+      background-color: #fffbe6;
+      color: #333;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #ffeb3b;
+      padding: 20px;
+      border-radius: 0 0 20px 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.8rem;
+      color: #222;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 20px 0;
+      border-radius: 10px;
+    }
+    p {
+      font-size: 1.2rem;
+      margin: 10px;
+    }
+    .btn {
+      display: inline-block;
+      background-color: #25d366;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 15px;
+    }
+    .btn:hover {
+      background-color: #128c7e;
+    }
+    footer {
+      margin-top: 30px;
+      font-size: 0.9rem;
+      color: #777;
+    }
   </style>
-</head><title>RJ Papad Surat — स्वाद में खास RJ पापड़ | ₹330/kg | Homemade Udad Papad</title>
-<meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास. Udad mri papad ₹330/kg. Only Surat free delivery. Order: +91 6353745646" />
-<link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
-<body><h1>RJ Papad Surat — स्वाद में खास RJ पापड़</h1>
-<p>RJ Papad Surat से ताज़ा <strong>उड़द मरी पापड़</strong> — कीमत ₹330 प्रति किलो. Only Surat free delivery. ऑर्डर करें: <a href="tel:+916353745646">+91 6353745646</a> या <a href="https://wa.me/916353745646">WhatsApp</a>.</p>
+</head>
+
+<body>
   <header>
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
-  <!-- 👉 यहाँ अपना RAW image URL डालें -->
-  <img src=https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png alt="RJ Papad Banner">
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de7861faafb1b8052e9bd122.png" alt="RJ Papad Surat Banner">
 
   <p>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</p>
+  <p>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</p>
 
-  <a class="btn" href="https://wa.me/916353745646" target="_blank">📞 WhatsApp Order</a>
+  <a class="btn" href="https://wa.me/919000000000" target="_blank">WhatsApp Order करें</a>
 
-  <footer style="margin-top:20px;font-size:13px;color:#555">© 2025 RJ Papad Surat</footer>
-</body><h1>RJ Papad Surat — स्वाद में खास RJ पापड़</h1>
-<p>RJ Papad Surat से ताज़ा <strong>उड़द मरी पापड़</strong> — कीमत ₹330 प्रति किलो. Only Surat free delivery. ऑर्डर करें: <a href="tel:+916353745646">+91 6353745646</a> या <a href="https://wa.me/916353745646">WhatsApp</a>.</p>
-</html><img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/rj-papad-surat-banner.png"
-     alt="RJ Papad Surat - उड़द मरी पापड़ ₹330/kg" />
+  <footer>© 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास</footer>
+</body>
+</html>
