--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de7861faafb1b8052e9bd122.png" alt="RJ Papad Surat Banner">
+  <img src=https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png alt="RJ Papad Surat Banner">
 
   <p>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</p>
   <p>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</p>
