--- a/index.html
+++ b/index.html
@@ -94,7 +94,16 @@
   <p>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</p>
   <p>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</p>
 
-  <a class="btn" href="https://wa.me/919000000000" target="_blank">WhatsApp Order करें</a>
+  <a class=<!-- WhatsApp और फ़ोन दोनों दिखाई देंगे -->
+<div style="text-align:center; margin:20px 0;">
+  <p style="font-size:1.1rem;">📞 Order / WhatsApp: <strong>+91 63537 45646</strong></p>
+  
+  <a href="https://wa.me/916353745646?text=नमस्ते%20RJ%20Papad%20Surat%2C%20मुझे%20पापड़%20ऑर्डर%20करना%20है।" 
+     target="_blank" 
+     style="display:inline-block; background-color:#25D366; color:white; padding:12px 25px; border-radius:25px; text-decoration:none; font-weight:bold; font-size:1rem;">
+     📲 WhatsApp पर ऑर्डर करें
+  </a>
+</div>
 
   <footer>© 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास</footer>
 </body>
