--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <p>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</p>
   <p>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</p>
 
-  <a class=<!-- WhatsApp और फ़ोन दोनों दिखाई देंगे -->
+  <!-- WhatsApp और फ़ोन दोनों दिखाई देंगे -->
 <div style="text-align:center; margin:20px 0;">
   <p style="font-size:1.1rem;">📞 Order / WhatsApp: <strong>+91 63537 45646</strong></p>
   
