--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
   <!-- WhatsApp और फ़ोन दोनों दिखाई देंगे -->
 <div style="text-align:center; margin:20px 0;">
   <p style="font-size:1.1rem;">📞 Order / WhatsApp: <strong>+91 63537 45646</strong></p>
-  
-  <a href="https://wa.me/916353745646?text=नमस्ते%20RJ%20Papad%20Surat%2C%20मैं%201kg%20मरी%20पापड़%20ऑर्डर%20करना%20चाहता%20हूं।" 
+  <a href="https://wa.me/916353745646?text=नमस्ते%20RJ%20Papad%20Surat%2C%20मैं%201kg%20मरी%20पापड़%20ऑर्डर%20करना%20चाहता%20हूं%20/%20चाहती%20हूं।" 
    target="_blank" 
    style="display:inline-block; background-color:#25D366; color:white; padding:12px 25px; border-radius:25px; text-decoration:none; font-weight:bold; font-size:1rem;">
    📲 1kg मरी पापड़ ऑर्डर करें
