--- a/index.html
+++ b/index.html
@@ -89,7 +89,38 @@
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
-  <!-- Banner Image -->
+  <!-- ====== START: RJ Papad Banners Section ====== -->
+<div style="text-align:center; margin-top:20px;">
+  
+  <!-- पहला बैनर (ऊपर वाला) -->
+  <img src="FIRST_BANNER_RAW_URL"
+       alt="स्वाद में खास RJ Papad Surat का विश्वास"
+       style="max-width:100%; height:auto; border-radius:15px; margin-bottom:20px; box-shadow:0 5px 15px rgba(0,0,0,0.1);" />
+  
+  <!-- दूसरा बैनर (नीचे वाला) -->
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+       alt="क्यों चुनें RJ Papad Surat"
+       style="max-width:100%; height:auto; border-radius:15px; margin-bottom:30px; box-shadow:0 5px 15px rgba(0,0,0,0.1);" />
+
+</div>
+<!-- ====== END: RJ Papad Banners Section ====== -->
+
+
+<!-- ====== START: ऑर्डर का विवरण Section ====== -->
+<div style="text-align:center; font-size:1.1rem; line-height:1.6; margin:10px;">
+  <p>🪔 <strong>उड़द मरी पापड़</strong> • ₹330/kg • Only Surat Free Delivery</p>
+  <p>✅ होममेड टेस्ट • शुद्ध सामग्री • 15+ साल का भरोसा</p>
+  <p>📦 <strong>ऑर्डर करने के लिए नीचे WhatsApp बटन दबाएँ:</strong></p>
+
+  <!-- WhatsApp Order Button -->
+  <a href="https://wa.me/919000000000?text=नमस्ते%20RJ%20Papad%20Surat%20में%201kg%20मरी%20पापड़%20ऑर्डर%20करना%20चाहता%20हूं"
+     target="_blank"
+     style="display:inline-block; background-color:#25D366; color:white; padding:12px 25px; border-radius:25px; font-weight:bold; text-decoration:none; box-shadow:0 4px 10px rgba(37,211,102,0.3);">
+     📱 WhatsApp पर ऑर्डर करें
+  </a>
+</div>
+<!-- ====== END: ऑर्डर का विवरण Section ====== -->
+    
 <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" 
      alt="क्यों चुनें RJ Papad Surat - स्वाद में खास RJ Papad का विश्वास" 
      style="max-width:100%;height:auto;border-radius:15px;margin:20px 0;" />
