--- a/index.html
+++ b/index.html
@@ -93,16 +93,38 @@
 
 <div style="text-align:center; margin-top:20px;">
   
-  <!-- 🥇 पहला बैनर -->
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de78....png"
+  <!-- 🥇 पहला बैनर (आपका भेजा हुआ इमेज) -->
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/YOUR_FIRST_BANNER_FILE.png"
        alt="स्वाद में खास RJ Papad का विश्वास"
        style="max-width:100%; height:auto; border-radius:15px; margin-bottom:20px; box-shadow:0 5px 15px rgba(0,0,0,0.1);" />
   
-  <!-- 🥈 दूसरा बैनर -->
+  <!-- 🥈 दूसरा बैनर (क्यों चुनें RJ Papad Surat) -->
   <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
        alt="क्यों चुनें RJ Papad Surat"
        style="max-width:100%; height:auto; border-radius:15px; margin-bottom:30px; box-shadow:0 5px 15px rgba(0,0,0,0.1);" />
 </div>
+
+
+<!-- ====== WhatsApp ORDER BUTTON ====== -->
+<div style="text-align:center; margin:20px;">
+  <a href="https://wa.me/916353745646?text=नमस्ते%20RJ%20Papad%20Surat%20में%201kg%20मरी%20पापड़%20ऑर्डर%20करना%20चाहता%20हूं"
+     target="_blank"
+     style="display:inline-block; background-color:#25D366; color:white; padding:14px 28px; border-radius:30px; font-size:1.2rem; font-weight:bold; text-decoration:none; box-shadow:0 4px 10px rgba(37,211,102,0.3);">
+     📱 WhatsApp पर ऑर्डर करें
+  </a>
+</div>
+
+
+<!-- ====== ORDER DETAILS SECTION ====== -->
+<div style="text-align:center; font-size:1.1rem; line-height:1.6; margin:10px;">
+  <p>🪔 <strong>ऑर्डर विवरण:</strong></p>
+  <p>✅ उड़द मरी पापड़ – ₹330/kg</p>
+  <p>✅ Only Surat Free Delivery</p>
+  <p>✅ Homemade Taste, 15+ साल का भरोसा</p>
+  <p>📞 संपर्क: <strong>6353745646</strong></p>
+</div>
+
+<!-- ====== END ====== -->
 
 
 <!-- ====== WhatsApp ORDER BUTTON ====== -->
