--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
   <input type="text" id="address" placeholder="पता" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br>
   <input type="text" id="pincode" placeholder="पिनकोड" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br>
   <input type="text" id="mobile" placeholder="मोबाइल नंबर" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br><br>
-
+<p>📦 ऑर्डर करने के लिए नीचे WhatsApp बटन दबाएँ:</p>
+<a href="https://wa.me/916353745646?text=नमस्ते%20RJ%20Papad%20Surat%20से%20ऑर्डर%20करना%20है" class="btn">📱 WhatsApp पर ऑर्डर करें</a>
 </div>
 
 <script>
