--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
 
 
 <!-- ====== START: ऑर्डर का विवरण Section ====== -->
-
+<div style="text-align:center; margin:20px 0;">
+  <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
+  <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</strong></p>
+</div>
 <!-- ====== END: ऑर्डर का विवरण Section ====== -->
     
 
