--- a/index.html
+++ b/index.html
@@ -3,34 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>स्वाद में खास RJ पापड़ का विश्वास — RJ Papad Surat</title>
-  <meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास। ₹330/kg, Only Surat Free Delivery. घर जैसा स्वाद, होममेड क्वालिटी।">
-  <meta name="keywords" content="RJ Papad Surat, Papad Surat, Homemade Papad, Papad Delivery Surat, Papad Online Order, RJ Papad">
+  <title>स्वाद में खास RJ पापड़ का विश्वास</title>
+  <meta name="description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery • Homemade Taste">
+  <meta name="keywords" content="RJ Papad Surat, उड़द पापड़, मरी पापड़, Gujarati Papad">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/">
 
-  <!-- Open Graph / Social Preview -->
-  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad Surat">
-  <meta property="og:description" content="₹330/kg • Only Surat Free Delivery • स्वाद में खास RJ पापड़ का विश्वास।">
-  <meta property="og:image" content="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de7861faafb1b8052e9bd122.png">
-  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/">
-  <meta property="og:type" content="website">
-
-  <!-- JSON-LD Schema for Google -->
+  <!-- JSON Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "RJ Papad Surat",
-    "description": "स्वाद में खास RJ पापड़ का विश्वास — ₹330/kg • Only Surat Free Delivery",
-    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de7861faafb1b8052e9bd122.png",
+    "description": "स्वाद में खास RJ पापड़ का विश्वास",
+    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Surat",
       "addressCountry": "IN"
     },
-    "telephone": "+919000000000",
-    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/"
+    "telephone": "+916353745646",
+    "url": "https://rjpapad111983-svg.github.io/"
   }
   </script>
 
@@ -43,26 +35,31 @@
       margin: 0;
       padding: 0;
     }
+
     header {
       background-color: #ffeb3b;
       padding: 20px;
       border-radius: 0 0 20px 20px;
     }
+
     header h1 {
       margin: 0;
       font-size: 1.8rem;
       color: #222;
     }
+
     img {
       max-width: 100%;
       height: auto;
-      margin: 20px 0;
+      margin: 15px 0;
       border-radius: 10px;
     }
+
     p {
       font-size: 1.2rem;
       margin: 10px;
     }
+
     .btn {
       display: inline-block;
       background-color: #25d366;
@@ -73,13 +70,25 @@
       font-weight: bold;
       margin-top: 15px;
     }
+
     .btn:hover {
       background-color: #128c7e;
     }
+
     footer {
       margin-top: 30px;
       font-size: 0.9rem;
       color: #777;
+    }
+
+    input {
+      width: 90%;
+      max-width: 400px;
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
     }
   </style>
 </head>
@@ -89,65 +98,61 @@
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
-<!-- ====== RJ Papad BANNERS + ORDER SECTION ====== -->
+  <!-- ====== RJ Papad Banners ====== -->
+  <div style="text-align:center; margin:20px 0;">
+    <!-- पहला बैनर -->
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+         alt="स्वाद में खास RJ Papad का विश्वास">
 
-<div style="text-align:center; margin-top:20px;">
-<!-- ====== RJ Papad BANNERS SECTION (सिर्फ 2 बैनर) ====== -->
-<div style="text-align:center; margin:20px 10px;">
+    <!-- दूसरा बैनर -->
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_000000009a02c86b40decb9885c0801d.png"
+         alt="क्यों चुनें RJ Papad Surat">
+  </div>
 
-  <!-- 🥇 पहला बैनर -->
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000818061f59639b8d50fbb440a.png"
-       alt="स्वाद में खास RJ Papad का विश्वास"
-       style="max-width:100%; height:auto; border-radius:12px; margin-bottom:20px; box-shadow:0 5px 15px rgba(0,0,0,0.1);">
+  <!-- ====== विवरण Section ====== -->
+  <div style="text-align:center; margin:20px 0;">
+    <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
+    <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</strong></p>
+  </div>
 
-  <!-- 🥈 दूसरा बैनर -->
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
-       alt="क्यों चुनें RJ Papad Surat"
-       style="max-width:100%; height:auto; border-radius:12px; margin-bottom:25px; box-shadow:0 5px 15px rgba(0,0,0,0.1);">
+  <!-- ====== ऑर्डर विवरण Section ====== -->
+  <div style="text-align:center; margin:20px 0;">
+    <h3>अपना ऑर्डर विवरण भरें</h3>
+    <p>📦 कृपया नीचे अपनी जानकारी भरें ताकि हम आपका ऑर्डर कन्फर्म कर सकें।</p>
 
-</div>
-<!-- ====== END OF BANNERS ====== -->
+    <input type="text" id="name" placeholder="नाम">
+    <input type="text" id="address" placeholder="पता">
+    <input type="text" id="pincode" placeholder="पिनकोड">
+    <input type="text" id="mobile" placeholder="मोबाइल नंबर">
 
+    <!-- WhatsApp Button नीचे फॉर्म के बाद -->
+    <div style="margin-top:14px;">
+      <a href="https://wa.me/916353745646" target="_blank" class="btn">📱 WhatsApp पर ऑर्डर करें</a>
+    </div>
+  </div>
 
-<!-- ====== START: ऑर्डर का विवरण Section ====== -->
-<div style="text-align:center; margin:20px 0;">
-  <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
-  <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</strong></p>
-</div>
-<!-- ====== END: ऑर्डर का विवरण Section ====== -->
-    
+  <!-- ====== Footer ====== -->
+  <footer>
+    © 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास
+  </footer>
 
+  <!-- ====== Optional JS for Sending WhatsApp Message ====== -->
+  <script>
+    function sendWhatsApp() {
+      var name = document.getElementById("name").value;
+      var address = document.getElementById("address").value;
+      var pincode = document.getElementById("pincode").value;
+      var mobile = document.getElementById("mobile").value;
 
-  <h3>अपना ऑर्डर विवरण भरें</h3>
-<p>📦 कृपया नीचे अपनी जानकारी भरें ताकि हम आपका ऑर्डर कन्फर्म कर सकें।</p>
-  <input type="text" id="name" placeholder="नाम" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br>
-  <input type="text" id="address" placeholder="पता" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br>
-  <input type="text" id="pincode" placeholder="पिनकोड" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br>
-  <input type="text" id="mobile" placeholder="मोबाइल नंबर" style="margin:5px; padding:8px; width:80%; border-radius:5px;"><br><br>
-<p>📦 ऑर्डर करने के लिए नीचे WhatsApp बटन दबाएँ:</p>
-<a href="https://wa.me/916353745646?text=नमस्ते%20RJ%20Papad%20Surat%20से%20ऑर्डर%20करना%20है" class="btn">📱 WhatsApp पर ऑर्डर करें</a>
-</div>
-
-<script>
-function sendWhatsApp() {
-  var name = document.getElementById('name').value;
-  var address = document.getElementById('address').value;
-  var pincode = document.getElementById('pincode').value;
-  var mobile = document.getElementById('mobile').value;
-
-  var message = `नमस्ते RJ Papad Surat, मैं 1kg मरी पापड़ ऑर्डर करना चाहता हूं / चाहती हूं।
+      var message = `नमस्ते RJ Papad Surat 👋
 नाम: ${name}
 पता: ${address}
 पिनकोड: ${pincode}
 मोबाइल नंबर: ${mobile}`;
 
-  var encodedMessage = encodeURIComponent(message);
-  var whatsappURL = `https://wa.me/916353745646?text=${encodedMessage}`;
-  window.open(whatsappURL, '_blank');
-}
-</script>
-</div>
-
-  <footer>© 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास</footer>
+      var whatsappURL = "https://wa.me/916353745646?text=" + encodeURIComponent(message);
+      window.open(whatsappURL, "_blank");
+    }
+  </script>
 </body>
 </html>
