--- a/index.html
+++ b/index.html
@@ -100,7 +100,24 @@
 
 <!-- ====== RJ Papad BANNERS ====== -->
 <div style="text-align:center; margin:20px 0;">
+</header>
 
+<!-- ====== RJ Papad BANNERS Section ====== -->
+<div style="text-align:center; margin:20px 0;">
+
+  <!-- 🥇 पहला बैनर -->
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+       alt="स्वाद में खास RJ Papad का विश्वास"
+       style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
+
+  <!-- 🪔 दूसरा बैनर -->
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/kyon-chune-rjpapad.png"
+       alt="क्यों चुनें RJ Papad Surat"
+       style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
+
+</div>
+
+<!-- ====== विवरण Section ====== -->
   <!-- पहला बैनर -->
   <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
        alt="स्वाद में खास RJ Papad का विश्वास"
