--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div style="text-align:center; margin:20px 0;">
 
   <!-- 🥇 पहला बैनर -->
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+  <img src=https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png
        alt="स्वाद में खास RJ Papad का विश्वास"
        style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
 
