--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@
        alt="स्वाद में खास RJ Papad का विश्वास"
        style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
 
-  <!-- 🪔 दूसरा बैनर -->
+ <!-- क्यों चुनें (एक बार ही रखें) -->
   <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/kyon-chune-rjpapad.png"
        alt="क्यों चुनें RJ Papad Surat"
+       style="max-width:100%; height:auto; border-radius:10px; margin:15px 0;">
+</div>
+
+
+    
        style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
     <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
     <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</strong></p>
