--- a/index.html
+++ b/index.html
@@ -1,78 +1,4 @@
-<!DOCTYPE html>
-<html lang="hi">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>स्वाद में खास RJ पापड़ का विश्वास</title>
-  <meta name="description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery • Homemade Taste">
-  <meta name="keywords" content="RJ Papad Surat, उड़द पापड़, मरी पापड़, Gujarati Papad">
-  <meta name="robots" content="index, follow">
-
-  <!-- JSON Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "RJ Papad Surat",
-    "description": "स्वाद में खास RJ पापड़ का विश्वास",
-    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Surat",
-      "addressCountry": "IN"
-    },
-    "telephone": "+916353745646",
-    "url": "https://rjpapad111983-svg.github.io/"
-  }
-  </script>
-
-  <style>
-    body {
-      font-family: "Noto Sans Devanagari", sans-serif;
-      background-color: #fffbe6;
-      color: #333;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #ffeb3b;
-      padding: 20px;
-      border-radius: 0 0 20px 20px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.8rem;
-      color: #222;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      margin: 15px 0;
-      border-radius: 10px;
-    }
-
-    p {
-      font-size: 1.2rem;
-      margin: 10px;
-    }
-
-    .btn {
-      display: inline-block;
-      background-color: #25d366;
-      color: white;
-      padding: 12px 25px;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: bold;
-      margin-top: 15px;
-    }
-
-    .btn:hover {
-      background-color: #128c7e;
+!      background-color: #128c7e;
     }
 
     footer {
@@ -155,5 +81,3 @@
       window.open(whatsappURL, "_blank");
     }
   </script>
-</body>
-</html>
