--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
 <!-- ====== RJ Papad BANNERS Section ====== -->
 <div style="text-align:center; margin:20px 0;">
 
-  <!-- 🥇 पहला बैनर -->
-  <img src=https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png
-       alt="स्वाद में खास RJ Papad का विश्वास"
-       style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
+  <!-- पहला बैनर -->
+  <img
+    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+    alt="स्वाद में खास RJ Papad का विश्वास"
+    style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
 
- <!-- क्यों चुनें (एक बार ही रखें) -->
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/kyon-chune-rjpapad.png"
-       alt="क्यों चुनें RJ Papad Surat"
-       style="max-width:100%; height:auto; border-radius:10px; margin:15px 0;">
+  <!-- क्यों चुनें (एक ही बार रखो) -->
+  <img
+    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/kyon-chune-rjpapad.png"
+    alt="क्यों चुनें RJ Papad Surat"
+    style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
 </div>
     <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
     <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</strong></p>
