--- a/index.html
+++ b/index.html
@@ -1,4 +1,78 @@
-!      background-color: #128c7e;
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>स्वाद में खास RJ पापड़ का विश्वास</title>
+  <meta name="description" content="RJ Papad Surat - 100% घर का बना उड़द मरी पापड़, सोडा व केमिकल फ्री, ₹330/kg में सच्चा स्वाद, 15+ साल का भरोसा।">
+  <meta name="keywords" content="RJ Papad Surat, उड़द पापड़, मरी पापड़, घर का बना पापड़, Gujarati Papad, Homemade Papad">
+  <meta name="robots" content="index, follow">
+
+  <!-- JSON Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad Surat",
+    "description": "स्वाद में खास RJ Papad का विश्वास - उड़द मरी पापड़ ₹330/kg में",
+    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressCountry": "IN"
+    },
+    "telephone": "+916353745646",
+    "url": "https://rjpapad111983-svg.github.io/"
+  }
+  </script>
+
+  <style>
+    body {
+      font-family: "Noto Sans Devanagari", sans-serif;
+      background-color: #fffbe6;
+      color: #333;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #ffeb3b;
+      padding: 20px;
+      border-radius: 0 0 20px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 1.8rem;
+      color: #222;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 15px 0;
+      border-radius: 10px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin: 10px;
+    }
+
+    .btn {
+      display: inline-block;
+      background-color: #25d366;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 15px;
+    }
+
+    .btn:hover {
+      background-color: #128c7e;
     }
 
     footer {
@@ -18,34 +92,35 @@
     }
   </style>
 </head>
-
 <body>
+
+  <!-- ====== HEADER ====== -->
   <header>
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
+  <!-- ====== RJ Papad BANNERS Section ====== -->
+  <div style="text-align:center; margin:20px 0;">
 
-<!-- ====== RJ Papad BANNERS Section ====== -->
-<div style="text-align:center; margin:20px 0;">
+    <!-- 🥇 पहला बैनर -->
+    <img
+      src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+      alt="स्वाद में खास RJ Papad का विश्वास">
 
-  <!-- पहला बैनर -->
-  <img
-    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
-    alt="स्वाद में खास RJ Papad का विश्वास"
-    style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
-
-  <!-- क्यों चुनें (एक ही बार रखो) -->
-  <img
-    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/kyon-chune-rjpapad.png"
-    alt="क्यों चुनें RJ Papad Surat"
-    style="max-width:100%; height:auto; border-radius:10px; margin-top:10px;">
-</div>
-    <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
-    <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की खासियत</strong></p>
+    <!-- 🪔 क्यों चुनें -->
+    <img
+      src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/kyon-chune-rjpapad.png"
+      alt="क्यों चुनें RJ Papad Surat">
   </div>
 
-  
-  <div style="text-align:center; margin:20px 0;">
+  <!-- ====== विवरण Section ====== -->
+  <div style="text-align:center;">
+    <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
+    <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की विशेषता</strong></p>
+  </div>
+
+  <!-- ====== ऑर्डर विवरण Section ====== -->
+  <div style="text-align:center; margin-top:20px;">
     <h3>अपना ऑर्डर विवरण भरें</h3>
     <p>📦 कृपया नीचे अपनी जानकारी भरें ताकि हम आपका ऑर्डर कन्फर्म कर सकें।</p>
 
@@ -54,9 +129,9 @@
     <input type="text" id="pincode" placeholder="पिनकोड">
     <input type="text" id="mobile" placeholder="मोबाइल नंबर">
 
-    <!-- WhatsApp Button नीचे फॉर्म के बाद -->
+    <!-- WhatsApp Button -->
     <div style="margin-top:14px;">
-      <a href="https://wa.me/916353745646" target="_blank" class="btn">📱 WhatsApp पर ऑर्डर करें</a>
+      <a href="#" class="btn" onclick="sendWhatsApp()">📲 ऑर्डर करने के लिए यहाँ क्लिक करें</a>
     </div>
   </div>
 
@@ -65,21 +140,20 @@
     © 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास
   </footer>
 
-  <!-- ====== Optional JS for Sending WhatsApp Message ====== -->
+  <!-- ====== WhatsApp Send Script ====== -->
   <script>
     function sendWhatsApp() {
-      var name = document.getElementById("name").value;
-      var address = document.getElementById("address").value;
-      var pincode = document.getElementById("pincode").value;
-      var mobile = document.getElementById("mobile").value;
+      var name = document.getElementById('name').value;
+      var address = document.getElementById('address').value;
+      var pincode = document.getElementById('pincode').value;
+      var mobile = document.getElementById('mobile').value;
 
-      var message = `नमस्ते RJ Papad Surat 👋
-नाम: ${name}
-पता: ${address}
-पिनकोड: ${pincode}
-मोबाइल नंबर: ${mobile}`;
+      var message = `नमस्ते RJ Papad Surat,%0Aमेरा ऑर्डर विवरण:%0Aनाम: ${name}%0Aपता: ${address}%0Aपिनकोड: ${pincode}%0Aमोबाइल नंबर: ${mobile}`;
+      var whatsappURL = `https://wa.me/916353745646?text=${message}`;
 
-      var whatsappURL = "https://wa.me/916353745646?text=" + encodeURIComponent(message);
       window.open(whatsappURL, "_blank");
     }
   </script>
+
+</body>
+</html>
