--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
     <img
       src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
       alt="स्वाद में खास RJ Papad का विश्वास">
-
+<img
+   src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"
+ 
   </div>
 
   <!-- ====== विवरण Section ====== -->
