--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
   </style>
 </head>
 <body>
-
+<!-- ===== RJ Papad Surat LOGO ===== -->
+<div style="text-align:center; margin-top:15px;">
+  <img 
+    src=" 
+    alt="RJ Papad Surat Logo"
+    style="width:180px; height:auto; border-radius:50%; box-shadow:0 0 10px rgba(0,0,0,0.2);">
+</div>
   <!-- ====== HEADER ====== -->
   <header>
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
