--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!-- ===== RJ Papad Surat LOGO ===== -->
 <div style="text-align:center; margin-top:15px;">
   <img 
-    src=" 
+    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"
     alt="RJ Papad Surat Logo"
     style="width:180px; height:auto; border-radius:50%; box-shadow:0 0 10px rgba(0,0,0,0.2);">
 </div>
