--- a/index.html
+++ b/index.html
@@ -93,6 +93,25 @@
   </style>
 </head>
 <body>
+  <!-- ===== FULL SCREEN LOGO SECTION ===== -->
+<div id="logo-screen" style="
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  background-color:#ffeb3b;
+  flex-direction:column;
+  transition:opacity 1s ease;">
+  
+  <img 
+    src="https://raw.githubusercontent.com/rjpapad/main/rj-logo.png" 
+    alt="RJ Papad Surat Logo"
+    style="width:250px; height:auto; border-radius:50%; box-shadow:0 0 20px rgba(0,0,0,0.3);">
+    
+  <h2 style="margin-top:20px; color:#4a2e00; font-size:1.5rem; font-family:'Noto Sans Devanagari';">
+    RJ Papad Surat
+  </h2>
+</div>
 <!-- ===== RJ Papad Surat LOGO ===== -->
 <div style="text-align:center; margin-top:15px;">
   <img 
