--- a/index.html
+++ b/index.html
@@ -95,13 +95,27 @@
 <body>
   <!-- ===== FULL SCREEN LOGO SECTION ===== -->
 <div id="logo-screen" style="
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-  background-color:#ffeb3b;
-  flex-direction:column;
-  transition:opacity 1s ease;">
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffeb3b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 1s ease;
+">
+  <img 
+    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"
+    alt="RJ Papad Surat Logo"
+    style="width:250px; height:auto; border-radius:50%; box-shadow:0 0 20px rgba(0,0,0,0.3);">
+  <h2 style="margin-top:20px; color:#4a2e00; font-size:1.5rem; font-family:'Noto Sans Devanagari';">
+    RJ Papad Surat
+  </h2>
+</div>
   
   <img 
     src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"
